--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,3 +46,43 @@
 .game-button:hover {
   border-radius: 76% 24% 83% 17% / 27% 61% 39% 73%;
 }
+
+.paws {
+  background-image: url("./assets/paws.svg");
+  background-size: 40px;
+  background-position: center;
+}
+
+.card-container {
+  width: 250px;
+  height: 360px;
+  perspective: 1000px;
+}
+
+.card-front,
+.card-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  color: white;
+  background-color: #3498db;
+  border-radius: 10px;
+  transition: transform 0.6s;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
+.card-container.flipped .card-front {
+  transform: rotateY(-180deg);
+}
+
+.card-container.flipped .card-back {
+  transform: rotateY(0deg);
+}
